# Variety

./: README.md  script.sh
Bash/: script1.sh  script2.sh  script3.sh  script4.sh  script5.sh  script6.sh
Business_Central_AL/: app.json
Business_Central_AL/enum/: posiciones.enum.al
Business_Central_AL/tablas/: equipos.tabla.al  jugadores.tabla.al  partidos.tabla.al
C++/: Baralla.cpp  Baralla.h  CMakeLists.txt  Carta.cpp  Carta.h  Fitxa.cpp  Fitxa.h  Joc.cpp  Joc.h  Jugador.cpp  Jugador.h  Ma.cpp  Ma.h  PilaBonificacions.cpp  PilaBonificacions.h  PilaCartes.cpp  PilaCartes.h  Tauler.cpp  Tauler.h  main.cpp
CSharp/Lab 1/: Lab 1.sln
CSharp/Lab 2/: CinemaEntryArray.sln
CSharp/Lab 3/: TeamScores.sln
CSharp/Lab 4/: Hyperspace Cheese Battle game.sln
CSharp/Lab 8/: Account.cs  Bank.cs  Lab 8.sln  Program.cs  test.txt
CSharp/Lab 9/: App.xaml.cs  Lab 9.csproj  Lab 9.sln  MainWindow.xaml  MainWindow.xaml.cs  PongGame.cs  Program.cs
CSharp/Solo Pong/: programa_nico.cs
CSharp/practica_saco/: prac_saco.cs  prac_saco_ball.cs
Examenes/Examen2/: Ejercicio1.java
HTML/: index.gdoc  resumen.txt
HTML/Practica Final/: estils.css
HTML/Tema_1/: index.html
HTML/Tema_2/: Llenguatge de Marques. Activitat 2.2.gdoc
HTML/Tema_4/: index.html
Java/: .gitignore  Examen 21 Octubre 2025.gdoc  Main.java
Java Swing/ejercicio_2/: pom.xml
Java Swing/ejercicio_3/: pom.xml
Java Swing/examen/: pom.xml
Practica Final/: index (1).html
Python/: clase.py  main.py  pokemon.py
Tema 1/: Entornos.gdoc
Tema_2/: Còpia de Llenguatge de Marques. Activitat 2.2.gdoc
(+313 files in other folders)
