cmake_minimum_required(VERSION 3.17)
project(Ejercicio)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ejercicio main.cpp Carta.cpp Carta.h Ma.cpp Ma.h Baralla.h Baralla.cpp Joc.cpp Joc.h Tauler.cpp Tauler.h Jugador.cpp Jugador.h PilaBonificacions.cpp PilaBonificacions.h Fitxa.cpp Fitxa.h PilaCartes.cpp PilaCartes.h Jugador.cpp Jugador.h Ma.cpp Ma.h Ma.cpp Ma.h)